add warning of unsupported syntax

--- a/sni_proxy.conf
+++ b/sni_proxy.conf
@@ -4,6 +4,11 @@
 
 # TODO logging options
 
+# NOTE THIS IS A ONLY A MOCK PROTOTYPE CONFIG FILE
+# CURRENT THIS FILE WILL NOT WORK, PLEASE SEE THE
+# SYNTAX IN README FOR THE CURRENT CONFIG FILE SYNTAX
+
+
 user nobody
 
 # blocks are dilimited with {...}
