Hack in support for regex matches against SNI hostname, and hostnames/wildcard in target specification.
- modify to allow Perl-compatible Regular Expressions in config file
instead of only plain hostnames  - allow hostnames in target
specification (not just IP addresses)  - allow * in target specification
to signify "use the hostname that   the client requested"  - treat
missing SNI like a blank hostname so it can also be caught   by a
regular expression  - process backends in the order that they appear in
the configuration   file to allow catch-all syntax on last line etc.  -
set SO_REUSEADDR on server socket to facilitate restart  - allow blank
lines and comments in config

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3
+CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3 -I/usr/local/include -L/usr/local/lib
 
 all: sni_proxy
 
@@ -7,7 +7,7 @@ all: sni_proxy
 	$(CC) $(CFLAGS) -c $<
 
 sni_proxy: connection.o tls.o util.o backend.o server.o sni_proxy.o config.o http.o
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -lpcre -o $@ $^
 
 .PHONY: clean all
 
