Replicate existing functionality using tables and listeners

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 CC = gcc
 CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3 -D_POSIX_SOURCE=1
+LIBS = -lpcre
 
 all: sni_proxy
 
@@ -7,7 +8,7 @@ all: sni_proxy
 	$(CC) $(CFLAGS) -c $<
 
 sni_proxy: backend.o table.o connection.o tls.o http.o util.o listener.o server.o sni_proxy.o config.o
-	$(CC) $(CFLAGS) -lpcre -o $@ $^
+	$(CC) $(CFLAGS) ${LIBS} -o $@ $^
 
 .PHONY: clean all
 
