Tweak test Makefile so it builds required module in ../src directory, explicitly return 0 upon success in binder test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,7 +8,7 @@ all: ${TESTS}
 	$(CC) $(CFLAGS) -o $@ $^
 
 %.o: %.c %.h
-	$(CC) $(CFLAGS) -c $<
+	$(CC) $(CFLAGS) -o $@ -c $<
 
 .PHONY: clean all
 
