Move -lpcre to end of linking command, fixes compiling under recent Ubuntu releases. Fix suggested by Tyler Akins.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ all: sni_proxy
 	$(CC) $(CFLAGS) -c $<
 
 sni_proxy: backend.o table.o connection.o tls.o http.o util.o listener.o server.o sni_proxy.o config.o
-	$(CC) $(CFLAGS) ${LIBS} -o $@ $^
+	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 .PHONY: clean all
 
