--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3 -g -I ../src -L ../src
+CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3 -D_POSIX_C_SOURCE=200809L -g -I ../src -L ../src
 TESTS = http.test tls.test
 
 all: ${TESTS}
