Remove other parser atttempt, update funcitonal test for new config

--- a/tests/test_proxy.conf
+++ b/tests/test_proxy.conf
@@ -1,10 +1,9 @@
-# pattern:
-# 	valid Perl-compatible Regular Expression that matches the hostname
-#
-# target:
-#	- a DNS name
-#	- an IP address
-#	- '*' to use the hostname that the client requested
-#
-# pattern	target	target port
-.*	*	80
+# Minimal test configuration
+
+listen 8080 {
+    proto http
+}
+
+table {
+    localhost localhost 80
+}
