--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,25 @@
 CC = gcc
 CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3 -D_POSIX_C_SOURCE=200809L
 LIBS = -lpcre
+MODULES =   sni_proxy.o \
+            config.o \
+            cfg_parser.o \
+            cfg_tokenizer.o \
+            util.o \
+            binder.o \
+            listener.o \
+            table.o \
+            backend.o \
+            connection.o \
+            tls.o \
+            http.o
 
 all: sni_proxy
 
 %.o: %.c %.h
 	$(CC) $(CFLAGS) -c $<
 
-sni_proxy: backend.o table.o connection.o tls.o http.o util.o listener.o server.o sni_proxy.o config.o cfg_parser.o cfg_tokenizer.o
+sni_proxy: $(MODULES)
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 .PHONY: clean all
