Tweak make files and tests so we can build and test under OpenBSD too

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,4 @@
-CC = gcc
-CFLAGS = -std=c99 -Wall -Wextra -pedantic -O3 -D_POSIX_C_SOURCE=200809L
-LIBS = -lpcre
+LIBS += -lpcre
 MODULES =   sni_proxy.o \
             config.o \
             cfg_parser.o \
