--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: c
 compiler:
   - clang
   - gcc
-install: DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libpcre3-dev; ./autogen.sh
+install: DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libpcre3-dev cdbs dh-autoreconf; ./autogen.sh
 script: ./configure && make && make check && sudo make install && sudo make uninstall && dpkg-buildpackage && sudo dpkg -i ../sniproxy_0.1-1_`dpkg --print-architecture`.deb
 
