--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.60])
-AC_INIT([https-sni-proxy], [0.1])
-AC_CONFIG_SRCDIR([src/sni_proxy.c])
+AC_INIT([sniproxy], [0.1])
+AC_CONFIG_SRCDIR([src/sniproxy.c])
 AM_INIT_AUTOMAKE
 
 # Checks for programs.
