--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -1,4 +1,4 @@
-# sni_proxy example configuration file
+# sniproxy example configuration file
 # lines that start with # are comments
 # lines with only white space are ignored
 
