Initial libev support
Several issues still remain:

* connections are not freed until the server shutdown
* several additional memory leaks
* introduced an additional dependency in listener.c upon connection.c
* error handling in callbacks needs some review

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - clang
   - gcc
 install:
-  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libpcre3-dev cdbs dh-autoreconf valgrind
+  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev cdbs dh-autoreconf valgrind
   - ./autogen.sh
 script:
   - ./configure && make && make check
