Benchmark for sniproxy too

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ script:
   - sudo make install && sudo make uninstall
   - bash -c "cd tests && ./functional_test valgrind --error-exitcode=1"
   - bash -c "cd tests && ./bench_test_httpd"
+  - bash -c "cd tests && ./bench_sniproxy"
   - dpkg-buildpackage && sudo dpkg -i ../sniproxy_0.1-1_`dpkg --print-architecture`.deb
 
