--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -6,6 +6,9 @@
 
 user nobody
 
+# PID file, needs to be placed in directory writable by user
+pidfile /var/tmp/sniproxy.pid
+
 # blocks are dilimited with {...}
 listen 80 {
     proto http
