Cleanup example configuration
Wrap to 80 columns, expand explanation of option port on table entries

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -43,11 +43,12 @@ table http_hosts {
     example.com 192.0.2.10 8004
 
 # pattern:
-# 	valid Perl-compatible Regular Expression that matches the hostname
+# 	valid Perl-compatible Regular Expression that matches the
+# 	hostname
 #
 # target:
 #	- a DNS name
-#	- an IP address
+#	- an IP address (with optional port)
 #	- '*' to use the hostname that the client requested
 #
 # pattern	target	target port
@@ -57,13 +58,16 @@ table http_hosts {
 
 # named tables are defined with the table directive
 table https_hosts {
-    # when proxying to sockets you should use different tables since the socket server most likely will not autodetect TLS or HTTP
+    # When proxying to local sockets you should use different tables since the
+    # local socket server most likely will not autodetect which protocol is
+    # being used
     example.org unix:/var/run/server.sock
 }
 
 # if no table specified the default 'default' table is defined
 table {
-    # if no port is included default http (80) and https (443) ports are assumed based on the protocol of the listen block using this table
+    # if no port is specified default HTTP (80) and HTTPS (443) ports are
+    # assumed based on the protocol of the listen block using this table
     example.com 192.0.2.10
     example.net 192.0.2.20
 }
