Refactor server lookup, new address module
Laying groundwork for non-blocking connect() and DNS resolution.  The
table.c/backendi.c should be just a data structure, and not be concerned
with DNS resolution and connecting to sockets. Pulled
open_backend_socket() code from backend.c into
handle_connection_client_hello() connection.c.

This required being able to return either: hostname, socket address, or
wildcard response when looking up the server. So introduced a new
address module to handle all IP/hostname parsing and displaying.

Removed util.c is it was only used for isnumeric() which was being used
only to validate ports, so it fit well in address.c.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,9 @@
 
 sbin_PROGRAMS = sniproxy
 
-sniproxy_SOURCES = backend.c \
+sniproxy_SOURCES = address.c \
+                   address.h \
+                   backend.c \
                    backend.h \
                    buffer.c \
                    buffer.h \
@@ -24,7 +26,6 @@ sniproxy_SOURCES = backend.c \
                    table.c \
                    table.h \
                    tls.c \
-                   tls.h \
-                   util.c \
-                   util.h
+                   tls.h
+
 sniproxy_LDADD = -lpcre -lev
