--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/src -g
 TESTS = http_test \
                 tls_test \
                 buffer_test \
+				address_test \
                 cfg_tokenizer_test \
                 config_test \
                 functional_test \
@@ -13,6 +14,7 @@ check_PROGRAMS = http_test \
                  tls_test \
                  buffer_test \
                  cfg_tokenizer_test \
+				 address_test \
                  config_test
 
 http_test_SOURCES = http_test.c \
@@ -24,6 +26,9 @@ tls_test_SOURCES = tls_test.c \
 buffer_test_SOURCES = buffer_test.c \
                       ../src/buffer.c
 
+address_test_SOURCES = address_test.c \
+                      ../src/address.c
+
 cfg_tokenizer_test_SOURCES = cfg_tokenizer_test.c \
                              ../src/cfg_tokenizer.c
 
@@ -31,7 +36,7 @@ config_test_SOURCES = config_test.c \
                       ../src/config.c \
                       ../src/cfg_parser.c \
                       ../src/cfg_tokenizer.c \
-                      ../src/util.c \
+                      ../src/address.c \
                       ../src/backend.c \
                       ../src/table.c \
                       ../src/listener.c \
