Test RPM build on Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,21 @@ compiler:
   - gcc
 install:
   - sudo apt-get update
-  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev cdbs dh-autoreconf valgrind apache2-utils
+  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev cdbs dh-autoreconf valgrind apache2-utils rpm
+  - mkdir -p ~/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
   - ./autogen.sh
 script:
+  - echo "Running unit tests"
   - ./configure
   - make all
   - make check
-  - sudo make install
-  - sudo make uninstall
+  - echo "Checking for memory leaks"
   - bash -c "cd tests && ./functional_test valgrind --error-exitcode=1"
+  - echo "Testing Debian package build"
   - dpkg-buildpackage
+  - echo "Testing RPM package build"
+  - rpmbuild --define "_sourcedir `pwd`" -ba --nodeps sniproxy.spec
+  - echo "Testing Debian package installation, configuration, and usage"
   - sudo dpkg -i ../sniproxy_0.1-1_`dpkg --print-architecture`.deb
   - sudo perl -pi -e 's/ENABLED=0/ENABLED=1/' /etc/default/sniproxy
   - echo -e "pidfile /tmp/sniproxy.pid\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost *\n}" | sudo tee /etc/sniproxy.conf
