--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - echo "Testing Debian package build"
   - dpkg-buildpackage
   - echo "Testing RPM package build"
+  - make dist
   - rpmbuild --define "_sourcedir `pwd`" -ba --nodeps sniproxy.spec
   - echo "Testing Debian package installation, configuration, and usage"
   - sudo dpkg -i ../sniproxy_0.1-1_`dpkg --print-architecture`.deb
