Add fallback addresses to listener config
This allows better handling of clients which make HTTP/1.0 or pre TLS
requests. The logic is very simple, if the table hostname lookup fails
we use the fallback address if configured.

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -13,6 +13,8 @@ pidfile /var/tmp/sniproxy.pid
 listen 80 {
     proto http
     table http_hosts
+    # Fallback backend server to use if we can not parse the client request
+    fallback localhost:8080
 }
 
 listen 443 {
