Update example configuration to use IP:port

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -22,12 +22,12 @@ listen 443 {
     table https_hosts
 }
 
-listen 192.0.2.10 80 {
+listen 192.0.2.10:80 {
     protocol http
     # this will use default table
 }
 
-listen 2001:0db8::10 80 {
+listen [2001:0db8::10]:80 {
     protocol http
     # this will use default table
 }
@@ -39,10 +39,9 @@ listen unix:/var/run/proxy.sock {
 
 # named tables are defined with the table directive
 table http_hosts {
-    example.com 192.0.2.10 8001
-    example.com 192.0.2.10 8002
-    example.com 192.0.2.10 8003
-    example.com 192.0.2.10 8004
+    example.com 192.0.2.10:8001
+    example.net 192.0.2.10:8002
+    example.org 192.0.2.10:8003
 
 # pattern:
 # 	valid Perl-compatible Regular Expression that matches the
@@ -53,9 +52,9 @@ table http_hosts {
 #	- an IP address (with optional port)
 #	- '*' to use the hostname that the client requested
 #
-# pattern	target	target port
-#.*\.itunes\.apple\.com$	*	443
-#.*	127.0.0.1	4443
+# pattern	target
+#.*\.itunes\.apple\.com$	*:443
+#.*	127.0.0.1:4443
 }
 
 # named tables are defined with the table directive
