--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -9,7 +9,7 @@ user nobody
 # PID file, needs to be placed in directory writable by user
 pidfile /var/tmp/sniproxy.pid
 
-# blocks are dilimited with {...}
+# blocks are delimited with {...}
 listen 80 {
     proto http
     table http_hosts
