Add logging module
Route all logging functions through this module. Support both logging to
a file and syslog.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,8 @@ sniproxy_SOURCES = address.c \
                    http.h \
                    listener.c \
                    listener.h \
+                   logger.c \
+                   logger.h \
                    server.c \
                    server.h \
                    sniproxy.c \
