Using an IP address literal in Travis-CI tests config

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
   - echo "Testing Debian package installation, configuration, and usage"
   - sudo dpkg -i ../sniproxy_0.1-1_`dpkg --print-architecture`.deb
   - sudo perl -pi -e 's/ENABLED=0/ENABLED=1/' /etc/default/sniproxy
-  - echo -e "pidfile /tmp/sniproxy.pid\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost *\n}" | sudo tee /etc/sniproxy.conf
+  - echo -e "pidfile /tmp/sniproxy.pid\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost 192.0.2.10\n}" | sudo tee /etc/sniproxy.conf
   - sudo service sniproxy start
   - sleep 1; test -e /tmp/sniproxy.pid && ps -up `cat /tmp/sniproxy.pid`
