Error log configuration

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -2,12 +2,21 @@
 # lines that start with # are comments
 # lines with only white space are ignored
 
-# TODO logging options
-
 user nobody
 
 # PID file, needs to be placed in directory writable by user
 pidfile /var/tmp/sniproxy.pid
+
+error_log {
+    # Log to the daemon syslog facility
+    syslog deamon
+
+    # Alternatively we could log to file
+    #filepath /var/log/sniproxy.log
+
+    # Control the verbosity of the log
+    priority notice
+}
 
 # blocks are delimited with {...}
 listen 80 {
