--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ script:
   - make dist
   - rpmbuild --define "_sourcedir `pwd`" -ba --nodeps redhat/sniproxy.spec
   - echo "Testing Debian package installation, configuration, and usage"
-  - sudo dpkg -i ../sniproxy_0.1-1_`dpkg --print-architecture`.deb
+  - sudo dpkg -i ../sniproxy_*_`dpkg --print-architecture`.deb
   - sudo perl -pi -e 's/ENABLED=0/ENABLED=1/' /etc/default/sniproxy
-  - echo -e "pidfile /tmp/sniproxy.pid\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost *\n}" | sudo tee /etc/sniproxy.conf
+  - echo -e "pidfile /var/run/sniproxy/sniproxy.pid\n\nerror_log {\nsyslog daemon\npriority notice\n}\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost *\n}" | sudo tee /etc/sniproxy.conf
   - sudo service sniproxy start
-  - sleep 1; test -e /tmp/sniproxy.pid && ps -up `cat /tmp/sniproxy.pid`
+  - sleep 1; test -e /var/run/sniproxy/sniproxy.pid && ps -up `cat /tmp/sniproxy.pid`
