Move default debian pidfile from /var/run/sniproxy/sniproxy.pid to /var/run/sniproxy.pid, fix umask

--- a/debian/sniproxy.conf
+++ b/debian/sniproxy.conf
@@ -4,8 +4,8 @@
 
 user daemon
 
-# PID file, needs to be placed in directory writable by user
-pidfile /var/run/sniproxy/sniproxy.pid
+# PID file
+pidfile /var/run/sniproxy.pid
 
 error_log {
     # Log to the daemon syslog facility
