If system provides a daemon(0,0) use it.
That makes sniproxy follow system conventions (e.g., in linux
daemon() does not need to fork twice, something that systemd
relies on).

Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/configure.ac
+++ b/configure.ac
@@ -48,7 +48,7 @@ AC_TYPE_SSIZE_T
 AC_FUNC_FORK
 AC_FUNC_MALLOC
 AC_FUNC_STRTOD
-AC_CHECK_FUNCS([memset socket strcasecmp strdup strerror strncasecmp],,
+AC_CHECK_FUNCS([daemon memset socket strcasecmp strdup strerror strncasecmp],,
     AC_MSG_ERROR([required functions(s) not found]))
 
 AC_CONFIG_FILES([Makefile
