--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -52,13 +52,17 @@ table http_hosts {
     example.net 192.0.2.10:8002
     example.org 192.0.2.10:8003
 
+# Each table entry is composed of three parts:
+#
 # pattern:
 # 	valid Perl-compatible Regular Expression that matches the
 # 	hostname
 #
 # target:
 #	- a DNS name
-#	- an IP address (with optional port)
+#	- an IP address and TCP port
+#	- an IP address (will connect to the same port as the listener received the
+#	  connection)
 #	- '*' to use the hostname that the client requested
 #
 # pattern	target
@@ -77,7 +81,7 @@ table https_hosts {
 # if no table specified the default 'default' table is defined
 table {
     # if no port is specified default HTTP (80) and HTTPS (443) ports are
-    # assumed based on the protocol of the listen block using this table
+    # assumed based on the listening port of each listener using this table
     example.com 192.0.2.10
     example.net 192.0.2.20
 }
