Added support for TLS Application Layer Protocol Negotiation (ALPN)
Signed-off-by: Nikos Mavrogiannopoulos <nmav@redhat.com>

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -28,7 +28,17 @@ listen 80 {
 
 listen 443 {
     proto tls
+
+# The prefer keyword enables sniproxy to select which handler
+# will take precedence if both ALPN and SNI tables are set, and
+# the client sends both extensions.
+
+    prefer alpn
+#   prefer sni
+
     table https_hosts
+    ALPNtable service_hosts
+    fallback localhost:8080
 }
 
 listen 192.0.2.10:80 {
@@ -84,4 +94,10 @@ table {
     # assumed based on the listening port of each listener using this table
     example.com 192.0.2.10
     example.net 192.0.2.20
+}
+
+ALPNtable service_hosts {
+    http/1.1 192.0.2.10
+    http/2.0 192.0.2.20
+    spdy/3 192.0.2.25
 }
