--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ sniproxy_SOURCES = address.c \
                    connection.h \
                    http.c \
                    http.h \
+                   types.h \
                    listener.c \
                    listener.h \
                    logger.c \
