Use clock_gettime() instead of gettimeofday() to avoid /etc/localtime lookups

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,4 +31,4 @@ sniproxy_SOURCES = address.c \
                    tls.c \
                    tls.h
 
-sniproxy_LDADD = -lpcre -lev
+sniproxy_LDADD = -lpcre -lev -lrt
