Seperate access logging

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -24,6 +24,11 @@ listen 80 {
     table http_hosts
     # Fallback backend server to use if we can not parse the client request
     fallback localhost:8080
+
+    access_log {
+        # Same options as error_log
+        filename /tmp/sniproxy.log
+    }
 }
 
 listen 443 {
