Add linker flags to tests/Makefile.am

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -27,6 +27,8 @@ tls_test_SOURCES = tls_test.c \
 buffer_test_SOURCES = buffer_test.c \
                       ../src/buffer.c
 
+buffer_test_LDADD = -lrt
+
 address_test_SOURCES = address_test.c \
                       ../src/address.c
 
@@ -47,3 +49,4 @@ config_test_SOURCES = config_test.c \
                       ../src/tls.c \
                       ../src/http.c
 
+config_test_LDADD = -lpcre -lev -lrt
