Rework Nikos Mavrogiannopoulos's ALPN support
Use protocol data functionality to hold configure ALPN protocols. Since
the complexity increased and there wasn't a clear use case, support only
a single TLS extension at a time per listener: TLS or ALPN. Complex
configurations involving both ALPN and SNI can be accomplished by using
configuring SNIProxy to proxy to another of its own listeners over a
UNIX socket to examine the other TLS extension. Use an additional
protocol argument toggle between SNI and ALPN TLS extensions.

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -59,7 +59,8 @@ listen [2001:0db8::10]:80 {
 }
 
 listen unix:/var/run/proxy.sock {
-    protocol http
+    protocol tls alpn
+    table alpn_protocol_hosts
     # this will use default table
 }
 
@@ -101,4 +102,10 @@ table {
     # assumed based on the listening port of each listener using this table
     example.com 192.0.2.10
     example.net 192.0.2.20
+}
+
+table alpn_protocol_hosts {
+    http/1.1    192.0.2.31
+    http/2.0    192.0.2.32
+    spdy/3      192.0.2.33
 }
