Add configuration option to enable bad request logging

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -25,6 +25,9 @@ listen 80 {
     # Fallback backend server to use if we can not parse the client request
     fallback localhost:8080
 
+    # Log the content of bad requests
+    #bad_requests log
+
     access_log {
         # Same options as error_log
         filename /tmp/sniproxy.log
