Fix detection of incomplete HTTP requests
Fixes #53.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,6 +8,7 @@ TESTS = http_test \
                 config_test \
                 functional_test \
                 bad_request_test \
+                slow_client_test \
                 connection_reset_test
 
 check_PROGRAMS = http_test \
