--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,9 @@ sniproxy_SOURCES = address.c \
                    listener.h \
                    logger.c \
                    logger.h \
-				   protocol.h \
+                   protocol.h \
+                   resolv.c \
+                   resolv.h \
                    server.c \
                    server.h \
                    sniproxy.c \
@@ -32,4 +34,4 @@ sniproxy_SOURCES = address.c \
                    tls.c \
                    tls.h
 
-sniproxy_LDADD = $(LIBEV_LIBS) $(LIBPCRE_LIBS) $(LIBRT_LIBS)
+sniproxy_LDADD = $(LIBEV_LIBS) $(LIBPCRE_LIBS) $(LIBRT_LIBS) -ludns
