Updating Debian, Redhat and Travis-CI files for 0.3 release

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 install:
   - sudo apt-get update
-  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev cdbs dh-autoreconf valgrind apache2-utils rpm
+  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev libudns-dev cdbs dh-autoreconf valgrind apache2-utils rpm
   - mkdir -p ~/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
   - ./autogen.sh
 script:
@@ -22,7 +22,7 @@ script:
   - echo "Testing Debian package installation, configuration, and usage"
   - sudo dpkg -i ../sniproxy_*_`dpkg --print-architecture`.deb
   - sudo perl -pi -e 's/ENABLED=0/ENABLED=1/' /etc/default/sniproxy
-  - echo -e "user daemon\n\npidfile /var/run/sniproxy.pid\n\nerror_log {\n  syslog daemon\n  priority notice\n}\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost 192.0.2.10\n}" | sudo tee /etc/sniproxy.conf
+  - echo -e "user daemon\n\npidfile /var/run/sniproxy.pid\n\nerror_log {\n  syslog daemon\n  priority notice\n}\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost *\n}" | sudo tee /etc/sniproxy.conf
   - sudo service sniproxy start
   - sleep 1; test -e /var/run/sniproxy.pid && ps -up `cat /var/run/sniproxy.pid`
   - sudo service sniproxy stop
