--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: sniproxy
 Section: unknown
 Priority: extra
 Maintainer: Andreas Loibl <andreas@andreas-loibl.de>
-Build-Depends: cdbs, debhelper (>= 8.0.0), dh-autoreconf, autotools-dev, pkg-config, libev-dev (>= 4.0), libpcre3-dev
+Build-Depends: cdbs, debhelper (>= 8.0.0), dh-autoreconf, autotools-dev, pkg-config, libev-dev (>= 4.0), libpcre3-dev, libudns-dev
 Standards-Version: 3.9.3
 Vcs-Git: https://github.com/dlundquist/HTTPS-SNI-Proxy.git
 Vcs-Browser: https://github.com/dlundquist/HTTPS-SNI-Proxy
