--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ install:
 script:
   - echo "Running unit tests"
   - ./configure
-  - make all
-  - make check
+  - make all check
   - echo "Checking for memory leaks"
   - bash -c "cd tests && ./bad_dns_request_test valgrind --leak-check=full"
   - bash -c "cd tests && ./bad_request_test valgrind --leak-check=full"
@@ -20,10 +19,6 @@ script:
   - bash -c "cd tests && ./hostname_test valgrind --leak-check=full"
   - bash -c "cd tests && ./slow_client_test valgrind --leak-check=full"
   - bash -c "cd tests && ./wildcard_test valgrind --leak-check=full"
-  - echo "Rebuilding without DNS and rerunning unit tests"
-  - ./configure --disable-dns
-  - make all
-  - make check
   - echo "Testing Debian package build"
   - dpkg-buildpackage
   - echo "Testing RPM package build"
@@ -37,3 +32,6 @@ script:
   - sleep 1; test -e /var/run/sniproxy.pid && ps -up `cat /var/run/sniproxy.pid`
   - sudo service sniproxy stop
   - sudo apt-get remove sniproxy
+  - echo "Rebuilding without DNS and rerunning unit tests"
+  - ./configure --disable-dns
+  - make clean all check
